@@ -437,6 +437,7 @@ TEST_GUI_OBJECTS =  &
 	$(OBJS)\test_gui_settings.obj &
 	$(OBJS)\test_gui_socket.obj &
 	$(OBJS)\test_gui_boxsizer.obj &
+	$(OBJS)\test_gui_wrapsizer.obj &
 	$(OBJS)\test_gui_valnum.obj &
 	$(OBJS)\test_gui_clientsize.obj &
 	$(OBJS)\test_gui_setsize.obj &
@@ -954,6 +955,9 @@ $(OBJS)\test_gui_socket.obj :  .AUTODEPEND .\net\socket.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(TEST_GUI_CXXFLAGS) $<
 
 $(OBJS)\test_gui_boxsizer.obj :  .AUTODEPEND .\sizers\boxsizer.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(TEST_GUI_CXXFLAGS) $<
+
+$(OBJS)\test_gui_wrapsizer.obj :  .AUTODEPEND .\sizers\wrapsizer.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(TEST_GUI_CXXFLAGS) $<
 
 $(OBJS)\test_gui_valnum.obj :  .AUTODEPEND .\validators\valnum.cpp
