@@ -830,6 +830,9 @@
 				RelativePath=".\controls\windowtest.cpp">
 			</File>
 			<File
+				RelativePath=".\sizers\wrapsizer.cpp">
+			</File>
+			<File
 				RelativePath=".\xml\xrctest.cpp">
 			</File>
 		</Filter>
