@@ -1152,6 +1152,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sizers\wrapsizer.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\xml\xrctest.cpp"
 				>
 			</File>
